; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_settings.c_append_to_argv.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_settings.c_append_to_argv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8***, i8*)* @append_to_argv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_to_argv(i32* %0, i8*** %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8***, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  store i32* %0, i32** %4, align 8
  store i8*** %1, i8**** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8***, i8**** %5, align 8
  %9 = load i8**, i8*** %8, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 2
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 8
  %15 = trunc i64 %14 to i32
  %16 = call i8** @xrealloc(i8** %9, i32 %15)
  store i8** %16, i8*** %7, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8*, i8** %18, i64 %21
  store i8* %17, i8** %22, align 8
  %23 = load i8**, i8*** %7, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8*, i8** %23, i64 %27
  store i8* null, i8** %28, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = load i32, i32* %29, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %29, align 4
  %32 = load i8**, i8*** %7, align 8
  %33 = load i8***, i8**** %5, align 8
  store i8** %32, i8*** %33, align 8
  ret void
}

declare dso_local i8** @xrealloc(i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
